[package]
name = "jeopardy_1"
version = "0.1.0"
authors = ["Patrick Luck <archer920@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4.5"
icecream = "0.1.0"
clap = {version = "~2.27.0", features = ["yaml"]}